@@ -672,6 +672,7 @@ Fixed bugs
 - fixed bug in presolving of cons_varbound with multi-aggregated variables
 - improve numerics in conflict analysis by using double-double arithmetic
 - fixed bound acceptance condition to avoid inconsistencies
+- fixed numerics in pseudoobj propagator by using double-double arithmetic
 
 Miscellaneous
 -------------
